# Sprint_5

./: README.md  conftest.py  pyproject.toml
src/: __init__.py  locators.py  utils.py
src/base/: base_page.py  base_test.py
src/config/: __init__.py  browser_options.py  links.py  locators.py
src/pages/: __init__.py  account_profile_page.py  forgot_password_page.py  login_page.py  main_page.py  registration_page.py
src/utils/: __init__.py  generation_data.py
tests/: test_account_profile.py  test_constructor.py  test_redirects.py  test_registration.py
tests/account_profile_page/: __init__.py  test_account_exit.py
tests/main_page/: __init__.py  test_constructor.py
tests/redirects/: __init__.py  test_redirect_auth.py  test_redirects_not_auth.py
tests/registration_page/: __init__.py  test_registration.py
