[tool.poetry]
name = "Sprint_5"
version = "0.1.0"
description = "UI tests stellarburgers.nomoreparties.site"
authors = ["Anton Bogomolov <ashteriel@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
selenium = "^4.26.1"
pytest-xdist = "^3.6.1"
flake8 = "^7.1.1"
pytest-flake8 = "^1.3.0"
mypy = "^1.13.0"
pytest-mypy = "^0.10.3"
black = "^24.10.0"
pytest-black = "^0.3.12"
bandit = "^1.7.10"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
